--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -29,7 +29,7 @@
     -->
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/stylesheet.css">
     <!--STYLES END-->
   </head>
 
@@ -105,6 +105,7 @@
 
     <!--SCRIPTS-->
     <script src="/dependencies/sails.io.js"></script>
+    <script src="/js/oneui.min.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
