--- a/views/pages/setup.ejs
+++ b/views/pages/setup.ejs
@@ -12,7 +12,7 @@
                         <p><%= errorMessage %></p>
                     </div>
                     <% } %>
-                    <form class="js-validation-login form-horizontal push-30-t" action="/login"
+                    <form class="js-validation-login form-horizontal push-30-t" action="/setup"
                           method="post">
                         <div class="form-group">
                             <div class="col-xs-12">
@@ -22,18 +22,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-12">
-                                <div class="form-material form-material-primary floating">
-                                    <input class="form-control" type="password" id="password"
-                                           name="password">
-                                    <label for="password">Password</label>
-                                </div>
-                            </div>
-                        </div>
                         <div class="form-group push-30-t">
                             <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-                                <button class="btn btn-sm btn-block btn-primary" type="submit">Log in</button>
+                                <button class="btn btn-sm btn-block btn-primary" type="submit">Add as admin</button>
                             </div>
                         </div>
                     </form>
@@ -46,3 +37,4 @@
 <div class="pulldown push-30-t text-center animated fadeInUp">
     <small><span class="js-year-copy"></span> &copy; AStA HTWG Konstanz</small>
 </div>
+
