Added option to add and remove categories

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -107,6 +107,7 @@
     <!--SCRIPTS-->
     <script src="/dependencies/sails.io.js"></script>
     <script src="/js/oneui.min.js"></script>
+    <script src="/js/app.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
