--- a/views/pages/news.ejs
+++ b/views/pages/news.ejs
@@ -12,7 +12,8 @@
                             <h3 class="block-title">Publish</h3>
                         </div>
                         <div class="block-content">
-                            <form class="form-horizontal">
+                            <div id="news-add-error-message"></div>
+                            <form class="form-horizontal" action="/news/add" method="post" id="add-news">
                                 <div class="form-group">
                                     <label class="col-xs-12" for="category-select">Choose a category</label>
                                     <div class="col-sm-9">
@@ -26,10 +27,18 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
+                                    <label class="col-xs-12" for="title">Title</label>
+                                    <div class="col-sm-9">
+                                        <input class="form-control" type="text" id="title"
+                                               name="title" placeholder="Text..">
+                                        <div class="help-block">Enter a title for your news.</div>
+                                    </div>
+                                </div>
+                                <div class="form-group">
                                     <label class="col-xs-12" for="short-description">Short description</label>
                                     <div class="col-sm-9">
                                         <input class="form-control" type="text" id="short-description"
-                                               name="short-description" placeholder="Text..">
+                                               name="shortDescription" placeholder="Text..">
                                         <div class="help-block">Enter a short description for your news.</div>
                                     </div>
                                 </div>
