--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -108,6 +108,8 @@
     <script src="/dependencies/sails.io.js"></script>
     <script src="/js/oneui.min.js"></script>
     <script src="/js/app.js"></script>
+    <script src="/js/jquery.maskedinput.min.js"></script>
     <!--SCRIPTS END-->
+    <script>jQuery(function(){App.initHelpers(['masked-inputs']);});</script>
   </body>
 </html>
