implemented add event

--- a/views/pages/modules/navigation.ejs
+++ b/views/pages/modules/navigation.ejs
@@ -31,6 +31,10 @@
                                     class="fa fa-bullhorn"></i><span class="sidebar-mini-hide">News</span></a>
                     </li>
                     <li>
+                        <a <% if(page === 'events'){ %>class="active" <% } %>href="/events"><i
+                                    class="fa fa-bullhorn"></i><span class="sidebar-mini-hide">Events</span></a>
+                    </li>
+                    <li>
                         <a <% if(page === 'endlicht'){ %>class="active" <% } %>href="/endlicht"><i
                                     class="fa fa-coffee"></i><span class="sidebar-mini-hide">Endlicht</span></a>
                     </li>
