added event icon to dashbar

--- a/views/pages/modules/navigation.ejs
+++ b/views/pages/modules/navigation.ejs
@@ -32,7 +32,7 @@
                     </li>
                     <li>
                         <a <% if(page === 'events'){ %>class="active" <% } %>href="/events"><i
-                                    class="fa fa-bullhorn"></i><span class="sidebar-mini-hide">Events</span></a>
+                             class="fa fa-calendar"></i><span class="sidebar-mini-hide">Events</span></a>
                     </li>
                     <li>
                         <a <% if(page === 'endlicht'){ %>class="active" <% } %>href="/endlicht"><i
