--- a/views/pages/modules/navigation.ejs
+++ b/views/pages/modules/navigation.ejs
@@ -12,7 +12,7 @@
                         data-action="sidebar_close">
                     <i class="fa fa-times"></i>
                 </button>
-                <a class="h5 text-white" href="/">
+                <a class="h5 text-white" href="/dashboard">
                     <span class="font-w600 h4 text-primary-lighter sidebar-mini-hide">HTWG</span> <span
                             class="h4 font-w600 sidebar-mini-hide">Campus</span>
                 </a>
@@ -23,7 +23,7 @@
             <div class="side-content side-content-full">
                 <ul class="nav-main">
                     <li>
-                        <a <% if(page === 'dashboard'){ %>class="active" <% } %>href="/"><i
+                        <a <% if(page === 'dashboard'){ %>class="active" <% } %>href="/dashboard"><i
                                     class="si si-speedometer"></i><span class="sidebar-mini-hide">Dashboard</span></a>
                     </li>
                     <li>
