Added privacy policy

--- a/views/pages/download.ejs
+++ b/views/pages/download.ejs
@@ -44,7 +44,7 @@
             |
             <a class="font-w600" style="color: #009B91" href="/">Impressum</a>
             |
-            <a class="font-w600" style="color: #009B91" href="/">Datenschutzerkl&auml;rung</a>
+            <a class="font-w600" style="color: #009B91" href="/Datenschutzerklärung_HTWG_Campus.pdf">Datenschutzerkl&auml;rung</a>
         </div>
     </footer>
 </div>
