Added impressum and contact page

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -38,7 +38,7 @@
     <!--STYLES END-->
   </head>
 
-  <body <% if (page === 'download') {%>style="background-color: #334152;" <%}%>>
+  <body <% if (page === 'download' || page === 'impressum' || page === 'contact') {%>style="background-color: #334152;" <%}%>>
     <%- body %>
 
 
