--- a/views/pages/download.ejs
+++ b/views/pages/download.ejs
@@ -39,12 +39,14 @@
             Entwickelt mit <i class="fa fa-heart text-city" style="color: red;"></i> und <i class="fa fa-coffee"></i>
         </div>
         <div class="pull-left" style="color: white">
-            <a class="font-w600" href="http://goo.gl/6LF10W" target="_blank" style="color: white">HTWG <span
-                        style="color: #009B91">Campus</span></a> © <span class="js-year-copy">2018</span>
+            <a class="font-w600" href="https://app.asta.htwg-konstanz.de" target="_blank" style="color: white">HTWG <span
+                        style="color: #009B91">Campus</span></a> &copy; <span class="js-year-copy">2018</span>
             |
-            <a class="font-w600" style="color: #009B91" href="/">Impressum</a>
+            <a class="font-w600" style="color: #009B91" href="/impressum">Impressum</a>
             |
             <a class="font-w600" style="color: #009B91" href="/Datenschutzerklärung_HTWG_Campus.pdf">Datenschutzerkl&auml;rung</a>
+            |
+            <a class="font-w600" style="color: #009B91" href="/contact">Kontakt</a>
         </div>
     </footer>
 </div>
