changed debug lvl

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -65,7 +65,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+
     <!--TEMPLATES END-->
 
 
@@ -109,10 +109,7 @@
     -->
 
     <!--SCRIPTS-->
-    <script src="/dependencies/sails.io.js"></script>
-    <script src="/js/oneui.min.js"></script>
-    <script src="/js/app.js"></script>
-    <script src="/js/jquery.maskedinput.min.js"></script>
+    <script src="/min/production.min.js"></script>
     <!--SCRIPTS END-->
     <script>jQuery(function(){App.initHelpers(['masked-inputs']);});</script>
   </body>
