--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -33,7 +33,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400italic,600,700%7COpen+Sans:300,400,400italic,600,700">
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/min/production.min.css">
+    <link rel="stylesheet" href="/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="/styles/stylesheet.css">
     <!--STYLES END-->
   </head>
 
@@ -108,7 +109,10 @@
     -->
 
     <!--SCRIPTS-->
-    <script src="/min/production.min.js"></script>
+    <script src="/dependencies/sails.io.js"></script>
+    <script src="/js/oneui.min.js"></script>
+    <script src="/js/app.js"></script>
+    <script src="/js/jquery.maskedinput.min.js"></script>
     <!--SCRIPTS END-->
     <script>jQuery(function(){App.initHelpers(['masked-inputs']);});</script>
   </body>
