started with view

--- a/views/pages/userfeedback.ejs
+++ b/views/pages/userfeedback.ejs
@@ -2,6 +2,9 @@
     <% include ./modules/navigation.ejs %>
     <% include ./modules/header.ejs %>
     <main id="main-container">
+        <div class="content">
+
+        </div>
 
     </main>
 
