--- a/views/pages/modules/navigation.ejs
+++ b/views/pages/modules/navigation.ejs
@@ -32,11 +32,15 @@
                     </li>
                     <li>
                         <a <% if(page === 'events'){ %>class="active" <% } %>href="/events"><i
-                             class="fa fa-calendar"></i><span class="sidebar-mini-hide">Events</span></a>
+                                    class="fa fa-calendar"></i><span class="sidebar-mini-hide">Events</span></a>
                     </li>
                     <li>
                         <a <% if(page === 'endlicht'){ %>class="active" <% } %>href="/endlicht"><i
                                     class="fa fa-coffee"></i><span class="sidebar-mini-hide">Endlicht</span></a>
+                    </li>
+                    <li>
+                        <a <% if(page === 'userfeedback'){ %>class="active" <% } %>href="/userfeedback"><i
+                                    class="fa fa-commenting"></i><span class="sidebar-mini-hide">Userfeedback</span></a>
                     </li>
                     <li>
                         <a href="/user"><i class="fa fa-user"></i><span class="sidebar-mini-hide">User</span></a>
