feedback gets displayed & can be deleted

--- a/views/pages/modules/navigation.ejs
+++ b/views/pages/modules/navigation.ejs
@@ -39,7 +39,7 @@
                                     class="fa fa-coffee"></i><span class="sidebar-mini-hide">Endlicht</span></a>
                     </li>
                     <li>
-                        <a <% if(page === 'userfeedback'){ %>class="active" <% } %>href="/userfeedback"><i
+                        <a <% if(page === 'userfeedback'){ %>class="active" <% } %>href="/feedback/userfeedback"><i
                                     class="fa fa-commenting"></i><span class="sidebar-mini-hide">Userfeedback</span></a>
                     </li>
                     <li>
