--- a/views/pages/modules/footer.ejs
+++ b/views/pages/modules/footer.ejs
@@ -1,7 +1,7 @@
 <!-- Footer -->
 <footer id="page-footer" class="content-mini content-mini-full font-s12 bg-gray-lighter clearfix">
     <div class="pull-right hidden-xs">
-        Crafted with <i class="fa fa-heart text-danger"></i> by <a class="font-w600" href="#">Manu and Roman</a>
+        Crafted with <i class="fa fa-heart text-danger"></i> by <a class="font-w600" href="#">Manu, Roman & Matze</a>
     </div>
     <div class="pull-left">
         <a class="font-w600" href="#">AStA HTWG Konstanz</a> &copy; <span class="js-year-copy"></span>
