--- a/views/pages/userfeedback.ejs
+++ b/views/pages/userfeedback.ejs
@@ -31,9 +31,9 @@
                             <td class="text-center"><%= feedback.date.toDateString() %></td>
                             <td class="text-center">
                                 <% if (feedback.category == 0) { %>
-                                    <p>Error</p>
+                                    Error
                                 <% } else if (feedback.category === 1) { %>
-                                    <p>Feedback</p>
+                                    Feedback
                                 <% } else { %>
                                     Unknown Category
                                 <% } %>
